2006-10-23  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pipeline.java: (Pipeline),
	(Pipeline.enumSinks), (Pipeline.reCalcState),
	(Pipeline.doChildStateChange), (Pipeline.changeState):
	Catch, store, replace EOS messages and detect when all sinks posted
	EOS so that we can forward EOS to the app.

	* src/com/fluendo/jst/Sink.java: (Sink.Pad):
	Remove locks, they are already taken.

	* src/com/fluendo/player/Cortado.java: (Cortado.handleMessage):
	Stop playback on EOS.

	* src/com/fluendo/plugin/TheoraDec.java: (TheoraDec..Pad):
	* src/com/fluendo/plugin/VorbisDec.java: (VorbisDec..Pad):
	Add some debugging in EOS.

2006-10-22  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado.init):
	* src/com/fluendo/player/CortadoPipeline.java: (CortadoPipeline),
	(CortadoPipeline.setComponent), (CortadoPipeline.getComponent),
	(CortadoPipeline.build):
	Set documentBase when configuring HTTPSrc.

	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc),
	(HTTPSrc.getInputStream), (HTTPSrc.HTTPSrc), (HTTPSrc.setProperty):
	Add documentBase property and parse the URL in that context. Fixes #467.

2006-10-22  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pad.java: (Pad):
	Add helper function.

	* src/com/fluendo/plugin/OggDemux.java: (OggDemux.....OggStream),
	(OggDemux.....OggStream.OggStream),
	(OggDemux.....OggStream.markDiscont),
	(OggDemux.....OggStream.reset),
	(OggDemux.....OggStream.isComplete),
	(OggDemux.....OggStream.activate),
	(OggDemux.....OggStream.pushPacket), (OggDemux.....OggStream.Pad):
	Combine the flow of all streams so that we don't crap out when only one
	stream is linked. Fixes #434 

2006-10-22  Wim Taymans  <wim@fluendo.com>

	* README:
	Review readme, Fixes #390.

	* src/com/fluendo/jst/Sink.java: (Sink.Pad):
	Small cleanup.

	* src/com/fluendo/player/Cortado.java: (Cortado.newState):
	Remove superfluous setState call.

2006-10-22  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Element.java: (Element),