@@ -1,5 +1,15 @@
 2006-10-23  Wim Taymans  <wim@fluendo.com>
 
+	* src/com/fluendo/player/Cortado.java: (Cortado),
+	(Cortado.handleMessage):
+	Handle errors a bit better.
+
+	* src/com/fluendo/player/CortadoPipeline.java: (CortadoPipeline),
+	(CortadoPipeline.padAdded), (CortadoPipeline.cleanup):
+	Do some more cleanups.
+
+2006-10-23  Wim Taymans  <wim@fluendo.com>
+
 	* src/com/fluendo/jst/Pipeline.java: (Pipeline),
 	(Pipeline.enumSinks), (Pipeline.reCalcState),
 	(Pipeline.doChildStateChange), (Pipeline.changeState):
